clean up a few memory leaks

--- a/eau2/Makefile
+++ b/eau2/Makefile
@@ -33,5 +33,8 @@ pseudo: build
 triv: build
 	./a.out -pseudo -num_nodes 1 -app trivial
 
+# triv-net: build
+# 	./a.out -num_nodes 1 -index 0 -app trivial 
+
 demo: build
 	./a.out -pseudo -num_nodes 3 -app demo
