--- a/eau2/Makefile
+++ b/eau2/Makefile
@@ -20,7 +20,7 @@ run: build
 
 # Valgrind the mainfile
 valgr: build
-	valgrind --leak-check=full --show-leak-kinds=all --track-origins=yes -v ./a.out -pseudo -num_nodes 1 -app trivial
+	valgrind --leak-check=full --show-leak-kinds=all --track-origins=yes -v ./a.out -pseudo -num_nodes 3 -app demo
 
 # Cleans only the compiled binaries and datafiles
 clean:
@@ -40,9 +40,11 @@ triv-net: build
 demo: build
 	./a.out -pseudo -num_nodes 3 -app demo
 
-# Still working on getting demo to work across a network-ip. We think there's a bug in our implementation of
-# network-ip.
+# Here's the Milestone 4 example code
+wc: build
+	./a.out -pseudo -num_nodes 3 -app wc -file "./data/100k.txt"
 
+# Milestone 3 example on a network.
 demo-net1: build
 	./a.out -num_nodes 3 -index 0 -ip 127.0.0.1 -port 8080 -app demo
 
@@ -51,3 +53,13 @@ demo-net2:
 
 demo-net3:
 	./a.out -num_nodes 3 -index 2 -ip 127.0.0.3 -port 8080 -server_ip 127.0.0.1 -server_port 8080 -app demo
+
+# Word count application on a network.
+wc-net1: build
+	./a.out -num_nodes 3 -index 0 -ip 127.0.0.1 -port 8080 -app wc -file "./data/100k.txt"
+
+wc-net2: 
+	./a.out -num_nodes 3 -index 1 -ip 127.0.0.2 -port 8080 -server_ip 127.0.0.1 -server_port 8080 -app wc -file "./data/100k.txt"
+
+wc-net3:
+	./a.out -num_nodes 3 -index 2 -ip 127.0.0.3 -port 8080 -server_ip 127.0.0.1 -server_port 8080 -app wc -file "./data/100k.txt"
