--- a/eau2/Makefile
+++ b/eau2/Makefile
@@ -20,7 +20,7 @@ run: build
 
 # Valgrind the mainfile
 valgr: build
-	valgrind --leak-check=full --show-leak-kinds=all --track-origins=yes -v ./a.out -pseudo -num_nodes 3 -app demo
+	valgrind --leak-check=full --show-leak-kinds=all --track-origins=yes -v ./a.out -pseudo -num_nodes 3 -app wc -file "./data/100k.txt"
 
 # Cleans only the compiled binaries and datafiles
 clean:
